--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -63,4 +63,5 @@ javascript:
     .col-sm-offset-2.col-sm-10
       = f.submit class: "button"
       | &nbsp;
-      =link_to "Back", "javascript:history.go(-1);void(0)"
+      .cancel
+        =link_to "Back", "javascript:history.go(-1);void(0)"
