more visual clean up

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -228,11 +228,8 @@ h2.score
     color: #444
 
 .goal_controls
-  margin: 3rem 0 4rem 0
-  .btn-sm
-    margin: 0 1rem 0 0
-
-
+  margin-top: 2rem
+  
 .form-hint
   margin-top: 1rem
 
