--- a/app/views/scores/_form.html.slim
+++ b/app/views/scores/_form.html.slim
@@ -34,4 +34,4 @@
       = f.submit class: "button"
 
       .cancel
-        =link_to :Cancel, goal_path(@score.goal)
+        =link_to :Back, goal_path(@score.goal)
