add basic /timeline view and begin treamtement for grid view

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -27,7 +27,7 @@
 @import 'elements/buttons'
 @import 'elements/icons'
 @import 'elements/lists'
-// @import 'elements/tables'
+@import 'elements/tables'
 @import 'elements/details'
 @import 'elements/panels'
 @import 'elements/forms'
@@ -229,7 +229,7 @@ h2.score
 
 .goal_controls
   margin-top: 2rem
-  
+
 .form-hint
   margin-top: 1rem
 
