--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -26,7 +26,7 @@
     /smaller #{@group.goals.count} total
     -if (is_admin?)
       .noprint
-        =link_to "New Goal",new_goal_path(group:@group), {class: "btn btn-sm btn-success"}
+        =link_to "New Goal",new_goal_path(group:@group), {class: "button"}
     == render :partial=>"shared/sub_goals", :locals=>{sub_goals: @group.top_level_goals}
   /
     .col-md-6
