--- a/app/views/welcome/mockup.html.slim
+++ b/app/views/welcome/mockup.html.slim
@@ -1,11 +1,11 @@
 .row
-  .col-md-8
+  .col-sm-8
     h1.heading-xlarge Technology
     p.lead CTS activites are still being defined but work continues on schedule in other areas.
-  .col-md-4
+  .col-sm-4
     .status-box.ok On track
 .row
-  .col-md-6
+  .col-sm-6
     h2.heading-large Sub-Goals
 
 .row
