trying to fix list_all layout, not quite there yet but better. Also changed date format to not display day, also renamed 'current_score' to 'calculated_score' for clarity

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -14,7 +14,7 @@
     h2 Vision
     p.lede
       b We want to help departments work together to transform government to meet user needs.
-    /Previously
+    /Previously:
     /Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
 .row.padded-row
   .col-sm-8
@@ -31,7 +31,7 @@
 
 .page-break
 
-/a name="by_group"
+a name="by_group"
 .row.padded-row
   .col-sm-10
     h2 Goals by Business Group
