--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -42,20 +42,6 @@
   h2
     font-size: 4.5rem
 
-.phase-banner-alpha
-  @include phase-banner
-  background: $white
-  padding: 10px 0 8px
-
-  @include media(tablet)
-    padding-bottom: 10px
-
-  border-bottom: 1px solid $border-colour
-
-  .phase-tag
-    @include phase-tag
-
-
 @media print
   .noprint, .header-global
     display: none !important
@@ -78,6 +64,10 @@
     page-break-before: always
 
 @media(max-width: 415px)
+  .phase-banner-alpha span
+    display: inline
+    line-height: 1.8rem
+
   ol.nice_list li::before
     text-align: left !important
     font-size: 20px !important
@@ -87,7 +77,7 @@
     display: none
 
   ol.nice_list.goals
-    h3
+    h4
       font-size: 25px
       line-height: 3rem
 
@@ -132,7 +122,7 @@ ol.nice_list
     font-size: 2.5rem
     min-width: 35px
     font-weight: 700
-    line-height: 1rem
+    line-height: 1.8rem
 
 .group_well
   clear:both
@@ -211,7 +201,7 @@ h2.score
 .sub_score
   text-align: center
   .amount
-    magin-top: 1.5rem
+    margin-top: 0rem
     font-size: 4.5rem
     color: #147
   .date
