--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -7,10 +7,10 @@ ol.nice_list.goals
   - sub_goals.each do |sub_goal|
     .row
       - if depth > 0
-        div class="col-sm-#{depth}"
+        div class="col-xs-#{depth}"
       .col-sm-1
         li
-      div class="col-sm-#{9-depth}"
+      div class="col-xs-#{9-depth}"
         h4
           =link_to sub_goal.name, sub_goal
           / Hide inline edit button...
@@ -26,9 +26,9 @@ ol.nice_list.goals
 
         .smaller
           =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty? || params["expand_all"]
-      .col-sm-1.sub_score
+      .col-xs-1.sub_score
           .noprint
-            h2 = link_to sub_goal.display_amount, sub_goal
+            h3.amount = link_to sub_goal.display_amount, sub_goal
             .date = sub_goal.current_display_date
             /small = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-xs btn-primary"}
       - if(sub_goal.children.count > 0 && !params['expand_all'].nil?)
