remove old SDP fields and add new boolean to goals. MIGRATE.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -63,7 +63,7 @@
   .page-break
     page-break-before: always
 
-@media(max-width: 415px)
+@media print(max-width: 415px)
   .phase-banner-alpha span
     display: inline
     line-height: 1.8rem
