add account_info bar at top including name and 'Sign out' link

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -38,6 +38,10 @@
 @import 'elements/phase-banner'
 @import 'elements/components'
 
+.account_info
+  font-size: 16px
+  margin-bottom: 0.5rem
+
 .big_goals
   h2
     font-size: 4.5rem
