--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -7,17 +7,11 @@ ol.nice_list.goals
   - sub_goals.each do |sub_goal|
     .row
       - if depth > 0
-        div class="col-xs-#{depth}"
+        div class="col-sm-#{depth}"
       .col-sm-1
         li
-      div class="col-xs-#{9-depth}"
-        h4
-          =link_to sub_goal.name, sub_goal
-          / Hide inline edit button...
-            -if is_admin?
-              =link_to edit_goal_path(sub_goal) do
-                .mini-edit
-                  .glyphicon.glyphicon-edit
+      div class="col-sm-#{9-depth}"
+        h4 =link_to sub_goal.name, sub_goal
         .smaller
             -if(sub_goal.get_team)
               =link_to sub_goal.get_team.name, sub_goal.get_team
@@ -27,9 +21,9 @@ ol.nice_list.goals
         .smaller
           =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty? || params["expand_all"]
       .col-sm-1.sub_score
-          .noprint
-            h3.amount = link_to sub_goal.display_amount, sub_goal
-            .date = sub_goal.current_display_date
-            /small = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-xs btn-primary"}
+        .noprint
+          h3.amount = link_to sub_goal.display_amount, sub_goal
+          .date = sub_goal.current_display_date
+          /small = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-xs btn-primary"}
       - if(sub_goal.children.count > 0 && !params['expand_all'].nil?)
         == render partial: 'shared/sub_goals', locals: {sub_goals: sub_goal.children, depth: depth+1}
