--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -52,6 +52,12 @@ javascript:
     .col-sm-10
       =collection_select :goal, :user_id, User.all, :id, :name, {prompt:true, include_blank:true}, {class: :selectpicker}
       .form-hint The owner is responsible for making progress updates against this goal.
+  -if is_admin?
+    .form-group
+      = f.label "SDP?", class: "col-sm-2 control-label"
+      .col-sm-10
+        = f.check_box :sdp, class: "form-control"
+        .form-hint Is this goal referenced in the Single Departmental Plan?
   //parent set in controller if ID passed in params (assuming parent is found)
   /nope. just print parent above and make parent_id a hidden var
     .form-group
