--- a/app/assets/stylesheets/goals.sass
+++ b/app/assets/stylesheets/goals.sass
@@ -3,3 +3,9 @@
     font-weight: bold
     margin-top: 1.2rem
     margin-bottom: 0.3rem
+
+.tiny_status
+  background: #090
+  color: #FFF
+  padding: 3px 4px 0
+  margin: 3px
