--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -6,7 +6,7 @@
       .col-sm-9
         h1 = @goal.name
         - if (@goal.children.count == 0)
-          h2 Delivery Status
+          h2 Delivery status
           - if can_modify? @goal
             =link_to "Report progress", new_goal_score_path(@goal), :class=>"button", :style=>"margin-bottom: 2rem"
           - if(@goal.scores.empty?)
